--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 <div class='date-month'>April</div>
                 <div class='date-day'>5</div>
               </div>
+              <div class='times'>9am-5pm</div>
             </div>
         </div>
       </div>
