--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class='location-place'>Olin College</div>
             <div class='location-street'>Olin Way</div>
             <div class='location-address'>Needham, MA 02492</div>
-            <a class='location-url' href='https://www.google.com/maps/place/Milas+Hall,+Olin+Way/@42.2927975,-71.2640807,17z/data=!3m1!4b1!4m2!3m1!1s0x89e381401ac37e9d:0x2d216f014b2a0d1f'>Google Maps</a>
+            <a class='location-url' href='https://www.google.com/maps/place/Milas+Hall,+Olin+Way/@42.2927975,-71.2640807,17z/data=!3m1!4b1!4m2!3m1!1s0x89e381401ac37e9d:0x2d216f014b2a0d1f'>Directions</a>
           </div>
             <div class='col-md-3'>
               <div class='date'>
@@ -58,14 +58,94 @@
         </div>
       </div>
 
-<!--       <div class="page-header">
-        <h1>Are We <br/> Game?</h1>
-        <p class='event-type'>Symposium</p>
-        <p class='subtitle'>Video Games <em>Beyond</em> Entertainment</p>
-      </div> -->
+      <div>
+        <iframe  src="https://www.eventbrite.com/tickets-external?eid=11081335573&ref=etckt" frameborder="0" height="260" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true">
+        </iframe>
+      </div>
 
-      <div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.com/tickets-external?eid=11081335573&ref=etckt" frameborder="0" height="260" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Online Ticketing</a><span style="color:#ddd;"> for </span><a style="color:#ddd; text-decoration:none;" target="_blank" href="https://www.eventbrite.com/e/are-we-game-video-games-beyond-entertainment-tickets-11081335573?ref=etckt">Are We Game? Video Games Beyond Entertainment</a> <span style="color:#ddd;">powered by</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
-
+      <h2>Schedule</h2>
+      <table class="schedule">
+         <thead>
+            <tr>
+               <th class='schedule__time'>Time</th>
+               <th class='schedule__loc'>Milas Hall lobby</th>
+               <th class='schedule__loc'>Milas Hall auditorium</th>
+               <th class='schedule__loc'>Campus Center Dining Hall</th>
+            </tr>
+         </thead>
+         <tbody>
+            <tr>
+               <th id="morning-0">9:00 AM - 10:00 AM</th>
+               <td colspan="4">
+                  <span class="talk">Registration and Coffee</span>
+               </td>
+            </tr>
+            <tr>
+               <th id="morning-1" scope="row">10:00 AM - 11:45 AM</th>
+               <td></td>
+               <td><span class="talk">Welcome Address and State of Play Panel</span>
+                 <ul>
+                   <li>The Multiple Geographies of Games</li>
+                   <li>How to Build a Grassroots Women's Network inside Your Game Studio</li>
+                 </ul>
+               </td>
+               <td></td>
+            </tr>
+            <tr>
+               <th id="morning-2" scope="row">12:00 PM – 1:30 PM</th>
+               <td></td>
+               <td></td>
+               <td><span class="talk">Free Lunch with Hands-on Game Demos</span></td>
+            </tr>
+            <tr>
+               <th id="morning-3" scope="row">1:45 PM – 3:30 PM</th>
+               <td></td>
+               <td><span class="talk">Games up Close Panel</span>
+                 <ul>
+                   <li>Past and Future Game Spectating</li>
+                   <li>What good would a game be if it condemned you for playing it?
+Super Columbine Massacre RPG! in the Media History Classroom</li>
+                  <li>The State of Video Game Journalism and Criticism:
+From 'Pretentious' Bloggers to Big Media Boys' Clubs</li>
+                   <li>38 Studios and the Reality of Video Game Production</li>
+                 </ul>
+                </td>
+               <td></td>
+            </tr>
+            <tr>
+               <th id="morning-4" scope="row">3:30 PM – 3:45 PM</th>
+               <td><span class="talk">Coffee Break</span></td>
+               <td></td>
+               <td></td>
+            </tr>
+            <tr>
+               <th id="morning-5" scope="row">3:45 PM – 4:00 PM</th>
+               <td></td>
+               <td><span class="talk">Closing Remarks and Reflections</span></td>
+               <td></td>
+            </tr>
+            <tr>
+               <th id="morning-6" scope="row">4:00 PM – 5:00 PM</th>
+               <td></td>
+               <td><span class="talk">Reception</span></td>
+               <td></td>
+            </tr>
+         </tbody>
+      </table>
     </div>
+
+    <div id="footer">
+      <div class="container">
+        <p class="text-muted pull-right">
+          <a target="_blank" href="http://jceipek.com/">
+            Site by Julian Ceipek.
+          </a>
+          <a target="_blank" href="https://www.eventbrite.com/e/are-we-game-video-games-beyond-entertainment-tickets-11081335573?ref=etckt">
+            Registration powered by Eventbrite.
+          </a>
+        </p>
+      </div>
+    </div>
+
   </body>
 </html>
