Center table headings

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <tr>
                <th id="morning-1" scope="row">10:00 AM - 11:45 AM</th>
                <td></td>
-               <td><span class="talk">Welcome Address and State of Play Panel</span>
+               <td><span class="talk">Welcome Address and "State of Play" Panel</span>
                  <ul>
                    <li>The Multiple Geographies of Games</li>
                    <li>How to Build a Grassroots Women's Network inside Your Game Studio</li>
@@ -100,7 +100,7 @@
             <tr>
                <th id="morning-3" scope="row">1:45 PM – 3:30 PM</th>
                <td></td>
-               <td><span class="talk">Games up Close Panel</span>
+               <td><span class="talk">"Games up Close" Panel</span>
                  <ul>
                    <li>Past and Future Game Spectating</li>
                    <li>What good would a game be if it condemned you for playing it?
