Added missing title

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                  <ul>
                    <li>The Multiple Geographies of Games</li>
                    <li>How to Build a Grassroots Women's Network inside Your Game Studio</li>
+                   <li>Socially Inclined: Growing a Professional Game Dev Community</li>
                  </ul>
                </td>
                <td></td>
